--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -156,7 +156,7 @@
 
   <!-- order manage -->
   <a
-    routerLink="/order"
+    routerLink="/orders"
     routerLinkActive="list-item-active"
     class="d-flex list-group-item list-group-item-action"
   >
@@ -186,7 +186,7 @@
 
   <!-- notification manage -->
   <a
-    routerLink="/notification"
+    routerLink="/notifications"
     routerLinkActive="list-item-active"
     class="d-flex list-group-item list-group-item-action"
   >
