--- a/src/app/product-manage/components/product-add/product-add.component.html
+++ b/src/app/product-manage/components/product-add/product-add.component.html
@@ -1,14 +1,12 @@
 <div class="d-flex mt-3 mx-2">
-  <mat-button
-    class="btn border-0 circle"
-    matRipple
-    [matRippleCentered]="true"
+  <mat-button-toggle
+    style="background-color: #fafafa !important;"
     (click)="goBack()"
   >
-    <mat-icon title="back" class="fs-2 mt-1 fw-bold">
+    <mat-icon title="back" class="fw-bold">
       keyboard_backspace
     </mat-icon>
-  </mat-button>
+  </mat-button-toggle>
   <p class="text-primary fw-bold fs-3 px-3 mt-3">
     {{ 'product.product-create' | translate }}
   </p>
@@ -486,7 +484,7 @@
           </label>
           <div class="input-group">
             <input
-              class="fs-4 py-0 fw-bold text-danger form-control input-customize"
+              class="fs-4 py-1 fw-bold text-danger form-control input-customize"
               ngModel
               name="sale_price"
               min="0"
@@ -548,8 +546,20 @@
                 class="d-none"
                 multiple
               />
-              <label class="btn btn-warning w-50" for="image1">Chọn file</label>
-              <span>{{ imageList.length }} file</span>
+              <label for="image1">
+                <div
+                  class="d-flex py-2 px-3 align-items-center"
+                  style="background-color: whitesmoke;"
+                >
+                  <span class="px-3">
+                    {{ 'upload-image' | translate }}
+                  </span>
+                  <i class="bi bi-upload"></i>
+                </div>
+              </label>
+              <span class="px-3">
+                {{ imageList.length }} {{ 'file' | translate }}
+              </span>
             </div>
           </div>
         </div>
@@ -557,12 +567,22 @@
       <div class="row rounded my-5 justify-content-between text-left">
         <div class="col-sm-6 col-0"></div>
         <div class="col-sm-4 col-6">
-          <button class="btn btn-primary w-100" (click)="createProduct()">
+          <button
+            matRipple
+            [matRippleCentered]="true"
+            class="btn btn-primary w-100"
+            (click)="createProduct()"
+          >
             {{ 'save' | translate }}
           </button>
         </div>
         <div class="col-sm-2 col-6">
-          <button class="btn btn-secondary w-100">
+          <button
+            matRipple
+            [matRippleCentered]="true"
+            class="btn btn-secondary w-100"
+            (click)="this.productForm.reset()"
+          >
             {{ 'clear' | translate }}
           </button>
         </div>
