--- a/src/app/product-manage/containers/product/product.component.scss
+++ b/src/app/product-manage/containers/product/product.component.scss
@@ -14,3 +14,8 @@ table {
 .hide {
   display: none;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
