--- a/src/app/supplier-manage/containers/supplier/supplier.component.scss
+++ b/src/app/supplier-manage/containers/supplier/supplier.component.scss
@@ -24,3 +24,8 @@ a {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
