--- a/src/app/user-manage/components/employee-add/add-user.component.scss
+++ b/src/app/user-manage/components/employee-add/add-user.component.scss
@@ -66,3 +66,8 @@ a {
   margin-right: 10px;
   cursor: pointer;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
