--- a/src/app/user-manage/components/employee-edit/edit-user.component.scss
+++ b/src/app/user-manage/components/employee-edit/edit-user.component.scss
@@ -59,3 +59,8 @@ button:focus {
 a {
   text-decoration: none;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
