--- a/src/app/user-manage/containers/customer-manage/customer-manage.component.scss
+++ b/src/app/user-manage/containers/customer-manage/customer-manage.component.scss
@@ -28,10 +28,20 @@ table {
 .mat-header-cell {
   font-weight: bolder;
 }
-
 .hide {
   display: none;
 }
 a {
   text-decoration: none;
+}
+
+.mat-cell {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
 }
