--- a/src/app/banner-manage/containers/banners/banners.component.html
+++ b/src/app/banner-manage/containers/banners/banners.component.html
@@ -117,21 +117,21 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button
+          <mat-button-toggle
             (click)="dialogUpdateBanner(element.id)"
             title="{{ 'edit' | translate }}"
             mat-icon-button
           >
             <mat-icon>edit</mat-icon>
-          </button>
+          </mat-button-toggle>
 
-          <button
+          <mat-button-toggle
             (click)="confirmDialog(element.id)"
             title="{{ 'delete' | translate }}"
             mat-icon-button
           >
             <mat-icon class="text-danger">delete</mat-icon>
-          </button>
+          </mat-button-toggle>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
