--- a/src/app/banner-manage/containers/banners/banners.component.scss
+++ b/src/app/banner-manage/containers/banners/banners.component.scss
@@ -11,6 +11,11 @@ table {
   font-weight: bolder;
 }
 
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
 .hide {
   display: none;
 }
