--- a/src/app/coupons-manage/components/coupons-edit/coupons-edit.component.html
+++ b/src/app/coupons-manage/components/coupons-edit/coupons-edit.component.html
@@ -71,6 +71,7 @@
                 #code="ngModel"
                 name="end_date"
                 class="form-control input-customize"
+                (ngModelChange)="onchangeDate()"
                 type="date"
                 required
               />
@@ -148,6 +149,8 @@
         <div class="col-3"></div>
         <div class="col-9">
           <button
+            matRipple
+            [matRippleCentered]="true"
             (click)="onSubmit()"
             class="btn btn-primary py-2 w-100"
             cdkFocusInitial
