--- a/src/app/coupons-manage/containers/coupons/coupons.component.html
+++ b/src/app/coupons-manage/containers/coupons/coupons.component.html
@@ -1,22 +1,22 @@
 <div class="nav navbar mt-4 mb-5 d-block mx-3">
   <div class="d-flex float-start">
-    <mat-button
-      class="btn border-0 circle"
-      matRipple
-      [matRippleCentered]="true"
+    <mat-button-toggle
+      style="background-color: #fafafa !important;"
       (click)="goBack()"
     >
-      <mat-icon title="back" class="fs-2 mt-1 fw-bold">
+      <mat-icon title="back" class="fw-bold">
         keyboard_backspace
       </mat-icon>
-    </mat-button>
+    </mat-button-toggle>
     <p class="fs-3 px-3 mt-3 fw-bold text-primary">
       {{ 'coupons.coupons-list' | translate }}
     </p>
   </div>
 
   <button
-    title="{{ 'user.create-user' | translate }}"
+    matRipple
+    [matRippleCentered]="true"
+    title="{{ 'coupons.coupons-create' | translate }}"
     (click)="createCoupons()"
     class="btn btn-primary float-end px-4 py-2"
   >
@@ -105,6 +105,7 @@
         <td mat-cell *matCellDef="let element">
           <div class="form-check form-switch">
             <input
+              (click)="confirmUpdate(element.id, element.published)"
               class="form-check-input"
               style="width: 45px; height: 22px;"
               type="checkbox"
@@ -119,21 +120,21 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button
+          <mat-button-toggle
             (click)="dialogUpdateCoupons(element?.id)"
             title="{{ 'edit' | translate }}"
             mat-icon-button
           >
             <mat-icon>edit</mat-icon>
-          </button>
+          </mat-button-toggle>
 
-          <button
+          <mat-button-toggle
             (click)="confirmDialog(element?.id)"
             title="{{ 'delete' | translate }}"
             mat-icon-button
           >
             <mat-icon class="text-danger">delete</mat-icon>
-          </button>
+          </mat-button-toggle>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
