--- a/src/app/coupons-manage/containers/coupons/coupons.component.scss
+++ b/src/app/coupons-manage/containers/coupons/coupons.component.scss
@@ -8,3 +8,8 @@ table {
 a {
   text-decoration: none;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
