--- a/src/app/product-configuration/components/rom-add/add-rom.component.html
+++ b/src/app/product-configuration/components/rom-add/add-rom.component.html
@@ -42,6 +42,8 @@
   </form>
   <div class="text-end mt-3 w-100">
     <button
+      matRipple
+      [matRippleCentered]="true"
       title="{{ 'save' | translate }}"
       (click)="onSubmit()"
       class="btn btn-primary"
