--- a/src/app/product-configuration/containers/color/color.component.scss
+++ b/src/app/product-configuration/containers/color/color.component.scss
@@ -11,3 +11,9 @@ table {
 a {
   text-decoration: none;
 }
+
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
