--- a/src/app/product-manage/components/brand-add/add-brand.component.html
+++ b/src/app/product-manage/components/brand-add/add-brand.component.html
@@ -53,7 +53,13 @@
     </div>
   </form>
   <div class="text-end mt-3 w-100">
-    <button (click)="onSubmit()" class="btn btn-primary w-50" cdkFocusInitial>
+    <button
+      matRipple
+      [matRippleCentered]="true"
+      (click)="onSubmit()"
+      class="btn btn-primary w-50"
+      cdkFocusInitial
+    >
       {{ 'save' | translate }}
     </button>
   </div>
