--- a/src/app/product-manage/components/product-add/product-add.component.scss
+++ b/src/app/product-manage/components/product-add/product-add.component.scss
@@ -15,3 +15,8 @@ select:focus {
   outline-width: 0;
   font-weight: 400;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
