--- a/src/app/product-manage/containers/product/product.component.html
+++ b/src/app/product-manage/containers/product/product.component.html
@@ -1,22 +1,22 @@
 <div class="nav navbar mt-4 mb-5 mx-3 d-block">
   <div class="d-flex float-start">
-    <mat-button
-      class="btn border-0 circle"
-      matRipple
-      [matRippleCentered]="true"
+    <mat-button-toggle
+      style="background-color: #fafafa !important;"
       (click)="goBack()"
     >
-      <mat-icon title="back" class="fs-2 mt-1 fw-bold">
+      <mat-icon title="back" class="fw-bold">
         keyboard_backspace
       </mat-icon>
-    </mat-button>
+    </mat-button-toggle>
     <p class="fs-3 px-3 mt-3 fw-bold text-primary">
       {{ 'product.product-list' | translate }}
     </p>
   </div>
 
   <button
-    title="{{ 'user.create-user' | translate }}"
+    matRipple
+    [matRippleCentered]="true"
+    title="{{ 'product.product-create' | translate }}"
     routerLink="add"
     class="btn btn-primary float-end px-4 py-2"
   >
@@ -118,27 +118,27 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button
+          <mat-button-toggle
             [routerLink]="['/product/view', element.id]"
             title="{{ 'view' | translate }}"
             mat-icon-button
           >
             <mat-icon>launch</mat-icon>
-          </button>
-          <button
+          </mat-button-toggle>
+          <mat-button-toggle
             [routerLink]="['/product/edit', element.id]"
             title="{{ 'edit' | translate }}"
             mat-icon-button
           >
             <mat-icon>edit</mat-icon>
-          </button>
-          <button
+          </mat-button-toggle>
+          <mat-button-toggle
             (click)="confirmDialog(element.id)"
             title="{{ 'delete' | translate }}"
             mat-icon-button
           >
             <mat-icon class="text-danger">delete</mat-icon>
-          </button>
+          </mat-button-toggle>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
