--- a/src/app/supplier-manage/components/supplier-edit/edit-supplier.component.scss
+++ b/src/app/supplier-manage/components/supplier-edit/edit-supplier.component.scss
@@ -53,3 +53,8 @@ button:focus {
   box-shadow: none !important;
   outline-width: 0;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
