--- a/src/app/user-manage/components/user-view/view-user.component.scss
+++ b/src/app/user-manage/components/user-view/view-user.component.scss
@@ -112,3 +112,8 @@ section {
 a {
   text-decoration: none;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
