--- a/src/app/user-manage/containers/employee-manage/employee-manage.component.html
+++ b/src/app/user-manage/containers/employee-manage/employee-manage.component.html
@@ -1,21 +1,21 @@
 <div class="nav navbar mt-4 mb-5 d-block px-3">
   <div class="d-flex float-start">
-    <mat-button
-      class="btn border-0 circle"
-      matRipple
-      [matRippleCentered]="true"
+    <mat-button-toggle
+      style="background-color: #fafafa !important;"
       (click)="goBack()"
     >
-      <mat-icon title="back" class="fs-2 mt-1 fw-bold">
+      <mat-icon title="back" class="fw-bold">
         keyboard_backspace
       </mat-icon>
-    </mat-button>
+    </mat-button-toggle>
     <p class="fs-3 px-3 mt-3 fw-bold text-primary">
       {{ 'user.employee-list' | translate }}
     </p>
   </div>
 
   <button
+    matRipple
+    [matRippleCentered]="true"
     title="{{ 'user.create-user' | translate }}"
     routerLink="add"
     class="btn btn-primary float-end px-4 py-2"
@@ -119,22 +119,22 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
           <a [routerLink]="['view', element.id]">
-            <button title="{{ 'view' | translate }}" mat-icon-button>
+            <mat-button-toggle title="{{ 'view' | translate }}" mat-icon-button>
               <mat-icon>launch</mat-icon>
-            </button>
+            </mat-button-toggle>
           </a>
           <a [routerLink]="['edit', element.id]">
-            <button title="{{ 'edit' | translate }}" mat-icon-button>
+            <mat-button-toggle title="{{ 'edit' | translate }}" mat-icon-button>
               <mat-icon>edit</mat-icon>
-            </button>
+            </mat-button-toggle>
           </a>
-          <button
+          <mat-button-toggle
             (click)="confirmDialog(element.id)"
             title="{{ 'delete' | translate }}"
             mat-icon-button
           >
             <mat-icon class="text-danger">delete</mat-icon>
-          </button>
+          </mat-button-toggle>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
