--- a/src/app/user-manage/containers/employee-manage/employee-manage.component.scss
+++ b/src/app/user-manage/containers/employee-manage/employee-manage.component.scss
@@ -34,3 +34,14 @@ table {
 a {
   text-decoration: none;
 }
+
+.mat-cell {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
