--- a/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.html
+++ b/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.html
@@ -1,15 +1,13 @@
 <div class="nav navbar mt-3 mb-5 mx-3 d-block">
   <div class="d-flex float-start align-items-center">
-    <mat-button
-      class="btn border-0 circle"
-      matRipple
-      [matRippleCentered]="true"
+    <mat-button-toggle
+      style="background-color: #fafafa !important;"
       (click)="goBack()"
     >
-      <mat-icon title="back" class="fs-2 mt-1 fw-bold">
+      <mat-icon title="back" class="fw-bold">
         keyboard_backspace
       </mat-icon>
-    </mat-button>
+    </mat-button-toggle>
     <p class="fs-3 fw-bold float-start mt-2 mx-3 text-primary">
       {{ 'warehouse.list-receipt-note' | translate }}
     </p>
@@ -83,9 +81,9 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
           <a [routerLink]="['view', element.id]">
-            <button title="{{ 'view' | translate }}" mat-icon-button>
+            <mat-button-toggle title="{{ 'view' | translate }}" mat-icon-button>
               <mat-icon>launch</mat-icon>
-            </button>
+            </mat-button-toggle>
           </a>
         </td>
       </ng-container>
