--- a/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.scss
+++ b/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.scss
@@ -16,3 +16,8 @@ table {
 a {
   text-decoration: none;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
