--- a/src/app/coupons-manage/containers/coupons/coupons.component.html
+++ b/src/app/coupons-manage/containers/coupons/coupons.component.html
@@ -105,12 +105,12 @@
         <td mat-cell *matCellDef="let element">
           <div class="form-check form-switch">
             <input
-              (click)="confirmUpdate(element.id, element.published)"
+              (click)="confirmUpdate(element.id, !element.disabled)"
               class="form-check-input"
               style="width: 45px; height: 22px;"
               type="checkbox"
               id="flexSwitchCheckDefault"
-              [checked]="element.published"
+              [checked]="element.disabled"
             />
           </div>
         </td>
