--- a/src/app/product-manage/components/product-add/product-add.component.html
+++ b/src/app/product-manage/components/product-add/product-add.component.html
@@ -430,7 +430,7 @@
             rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
         "
       >
-        <p class="fw-bold">{{ 'product.prices' | translate }}</p>
+        <p class="fw-bold">{{ 'product.price' | translate }}</p>
         <div class="row justify-content-between text-left">
           <div class="form-group col-sm-6 flex-column d-flex">
             <label class="form-control-label px-3">
@@ -438,7 +438,7 @@
             </label>
             <div class="input-group">
               <input
-                class="fs-4 py-0 fw-bold text-danger form-control input-customize"
+                class="fs-4 py-1 fw-bold text-danger form-control input-customize"
                 [ngModel]
                 name="original_price"
                 min="0"
@@ -478,28 +478,30 @@
             </small>
           </div>
         </div>
-        <div class="form-group flex-column d-flex">
-          <label class="form-control-label px-3">
-            {{ 'product.sale-price' | translate }} (VNĐ)
-          </label>
-          <div class="input-group">
-            <input
-              class="fs-4 py-1 fw-bold text-danger form-control input-customize"
-              ngModel
-              name="sale_price"
-              min="0"
-              type="number"
-              required
-            />
-            <span class="input-group-text py-1 input-customize">VNĐ</span>
-          </div>
+        <div class="row">
+          <div class="form-group col-sm-6 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.sale-price' | translate }} (VNĐ)
+            </label>
+            <div class="input-group">
+              <input
+                class="fs-4 py-1 fw-bold text-danger form-control input-customize"
+                ngModel
+                name="sale_price"
+                min="0"
+                type="number"
+                required
+              />
+              <span class="input-group-text py-1 input-customize">VNĐ</span>
+            </div>
 
-          <small
-            class="form-text text-muted"
-            *ngIf="!color?.valid && (color?.dirty || color?.touched)"
-          >
-            {{ 'notification.invalid-color' | translate }}
-          </small>
+            <small
+              class="form-text text-muted"
+              *ngIf="!color?.valid && (color?.dirty || color?.touched)"
+            >
+              {{ 'notification.invalid-color' | translate }}
+            </small>
+          </div>
         </div>
       </div>
       <!-- ------------------------------------------------------------------------------------------------ -->
@@ -510,7 +512,7 @@
             rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
         "
       >
-        <p class="fw-bold">Thêm hình ảnh sản phẩm</p>
+        <p class="fw-bold">{{ 'product.add-image' | translate }}</p>
         <div class="row justify-content-between text-left">
           <div class="form-group row flex-column d-flex">
             <div class="d-flex row">
@@ -538,7 +540,7 @@
                 </div>
               </label>
             </div>
-            <div class="w-50 mt-4">
+            <div class="w-100 mt-4">
               <input
                 (change)="filechange($event)"
                 type="file"
@@ -581,7 +583,7 @@
             matRipple
             [matRippleCentered]="true"
             class="btn btn-secondary w-100"
-            (click)="this.productForm.reset()"
+            (click)="clear()"
           >
             {{ 'clear' | translate }}
           </button>
