--- a/src/app/user-manage/components/employee-edit/edit-user.component.html
+++ b/src/app/user-manage/components/employee-edit/edit-user.component.html
@@ -28,14 +28,26 @@
             class="avatar img-circle img-thumbnail"
             alt="avatar"
           />
-          <!-- <h6>Upload a different photo...</h6> -->
-          <input
-            ngModel
-            (change)="filechange($event)"
-            name="avatar"
-            type="file"
-            class="form-control mt-3"
-          />
+          <div class="w-100 mt-4">
+            <input
+              (change)="filechange($event)"
+              type="file"
+              id="avatar"
+              class="d-none"
+              multiple
+            />
+            <label for="avatar">
+              <div
+                class="d-flex py-2 px-3 align-items-center"
+                style="background-color: whitesmoke;"
+              >
+                <span class="px-3">
+                  {{ 'upload-image' | translate }}
+                </span>
+                <i class="bi bi-upload"></i>
+              </div>
+            </label>
+          </div>
         </div>
       </div>
 
