--- a/src/app/warehouse-manage/containers/receipts-add/receipts-add.component.scss
+++ b/src/app/warehouse-manage/containers/receipts-add/receipts-add.component.scss
@@ -23,3 +23,8 @@ select:focus {
 table {
   width: 100%;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  border-radius: 50% !important;
+}
