--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -196,7 +196,7 @@
 
   <!-- shop information -->
   <a
-    routerLink="/shopInfo"
+    routerLink="/shop-information"
     routerLinkActive="list-item-active"
     class="d-flex list-group-item list-group-item-action"
   >
