--- a/src/app/user-manage/components/employee-add/add-user.component.html
+++ b/src/app/user-manage/components/employee-add/add-user.component.html
@@ -5,7 +5,7 @@
   #createUserForm="ngForm"
 >
   <div class="container bootstrap snippets bootdey my-3">
-    <div class="d-flex">
+    <div class="d-flex mb-1">
       <mat-button-toggle
         style="background-color: #fafafa !important;"
         (click)="goBack()"
@@ -40,6 +40,8 @@
             />
             <label for="avatar">
               <div
+                matRipple
+                [matRippleCentered]="true"
                 class="d-flex py-2 px-3 align-items-center"
                 style="background-color: whitesmoke;"
               >
@@ -54,7 +56,7 @@
       </div>
 
       <!-- edit form column -->
-      <div class="col-md-8 personal-info">
+      <div class="col-md-8 col-12">
         <h3 class="fs-3 fw-bold">{{ 'user.user-info' | translate }}</h3>
         <div>
           <!-- role -->
