--- a/src/app/user-manage/components/employee-edit/edit-user.component.html
+++ b/src/app/user-manage/components/employee-edit/edit-user.component.html
@@ -19,7 +19,7 @@
       </p>
     </div>
 
-    <div class="row bg-white mx-3 py-3 shadow mt-3">
+    <div class="row bg-white mx-3 py-4 shadow mt-3">
       <!-- left column -->
       <div class="col-md-3">
         <div class="text-center">
@@ -38,6 +38,8 @@
             />
             <label for="avatar">
               <div
+                matRipple
+                [matRippleCentered]="true"
                 class="d-flex py-2 px-3 align-items-center"
                 style="background-color: whitesmoke;"
               >
@@ -226,5 +228,4 @@
       </div>
     </div>
   </div>
-  <hr />
 </form>
