--- a/src/app/supplier-manage/components/supplier-add/add-supplier.component.html
+++ b/src/app/supplier-manage/components/supplier-add/add-supplier.component.html
@@ -63,7 +63,7 @@
                 ngModel
                 #phone_number="ngModel"
                 name="phone"
-                placeholder="{{ 'placeholder.input-phone' | translate }}"
+                placeholder="{{ 'placeholder.input-sup-phone' | translate }}"
                 type="text"
                 required
               />
