--- a/src/app/supplier-manage/components/supplier-view/view-supplier.component.html
+++ b/src/app/supplier-manage/components/supplier-view/view-supplier.component.html
@@ -10,7 +10,7 @@
     </mat-icon>
   </mat-button>
   <p class="text-primary fw-bold fs-3 px-3 mt-3">
-    {{ 'user.supplier-info' | translate }}
+    {{ 'supplier.supplier-info' | translate }}
   </p>
 </div>
 
@@ -23,7 +23,7 @@
           class="mb-2 px-3 d-flex bg-secondary display-28 pt-4 pb-2 text-white px-1 rounded fs-4"
         >
           <p class="display-26s text-warning me-2 font-weight-600">
-            {{ 'user.supplier' | translate }}
+            {{ 'supplier.supplier' | translate }}
           </p>
           <p class="px-3">{{ supplierInfo?.name }}</p>
         </li>
@@ -35,7 +35,7 @@
         </li>
         <li class="mb-2 mb-xl-3 display-28">
           <span class="display-26 text-secondary me-2 font-weight-600">
-            {{ 'user.email' | translate }}
+            {{ 'supplier.supplier-info' | translate }}
           </span>
           {{ supplierInfo?.email }}
         </li>
