--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,3 +34,61 @@ mat-drawer {
 .mat-menu {
   min-width: 300px !important;
 }
+.search_input {
+  width: 100%;
+  flex: 1;
+  height: 3rem;
+  background-color: whitesmoke;
+  border: none;
+  padding: 0 1rem 0 1rem;
+}
+
+input {
+  outline: none;
+}
+
+.search_icon {
+  height: 3rem;
+  width: 3rem;
+  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.search_icon:hover {
+  color: red;
+}
+
+a {
+  text-decoration: none;
+}
+
+.item :hover {
+  color: red;
+}
+.icons {
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+}
+.avatar {
+  width: 50px;
+  height: 50px;
+}
+.list-item:hover {
+  background-color: rgb(240, 230, 230);
+  color: black;
+  padding: 10px 15px 10px 15px;
+}
+
+.list-item {
+  color: white;
+  padding: 10px 15px 10px 15px;
+}
+.active-item {
+  background-color: rgb(240, 230, 230);
+  color: black;
+  padding: 10px 15px 10px 15px;
+}
